Fix form spacings

--- a/src/App.css
+++ b/src/App.css
@@ -290,7 +290,7 @@ body {
 }
 
 .title-input {
-  width: 22rem;
+  width: 31rem;
   height: 2rem;
   font-family: Montserrat;
   font-size: 1rem;
@@ -308,7 +308,7 @@ body {
 }
 
 .category-select {
-  width: 17.813rem;
+  width: 28.813rem;
   height: 2.813rem;
   margin: 1.188rem 2.125rem 0;
   padding: 0.375rem 0.938rem 0.563rem 1rem;
@@ -326,7 +326,7 @@ body {
 }
 
 .add-book-button {
-  width: 11.5rem;
+  width: 15.5rem;
   height: 2.813rem;
   margin: 1.188rem 0 0 2.125rem;
   padding: 0.801rem 1.188rem 0.886rem 1.375rem;
@@ -334,6 +334,5 @@ body {
   border: none;
   border-radius: 3px;
   color: #fff;
-  background-color: #0290ff
-  
+  background-color: #0290ff;
 }
